Cambios en mi Index

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cosas Turbias</title>
 </head>
 <body>
-    <h1>Hola 
+    <h1>Etiquetas html</h1>
+    <ul>
+        <li>(p): Para Parrafos</li>
+        <li>(h1): Para Titulos</li>
+        <li>(h2): Para Subtitulos</li>
+    </ul>
 
-    </h1>
-    <h2>Mi primer web
-        
-    </h2>
 </body>
 </html>
