Cambios en mi Index2

--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <title>Cosas Turbias</title>
 </head>
 <body>
-    <h1>Etiquetas html</h1>
+    <h1>Etiquetas HTML</h1>
     <ul>
         <li>(p): Para Parrafos</li>
         <li>(h1): Para Titulos</li>
         <li>(h2): Para Subtitulos</li>
     </ul>
+
+    <H2>COMANDOS BASICOS GITHUB</H2>
+    <ol>
+        <li>1.- git init </li>
+        <li>2.- git add . </li>
+        <li>3.- git commit -m "Nombre del index" </li>
+        <li>4.- git push </li>
+    </ol>
 
 </body>
 </html>
