--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
         <li>3.- git commit -m "Nombre del index" </li>
         <li>4.- git push </li>
     </ol>
-
+    <img src="img/img1.png" width="500px" height="auto" title="MIMI">
+    <p>Los gatos son animales carnívoros, por lo que tienen que incluir la carne en su dieta.</br> 
+        A diferencia de los perros, los gatos nunca podrían ser vegetarianos o veganos. </br> felinos toman como fuente de energía
+         principal las proteínas y necesitan mayores cantidades de éstas que las que necesitan los perros.</p>
+         <video src="video/I always come back.mp4" autoplay allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></video>
+         <iframe 
+         width="1000px" 
+         height="500px" 
+         src="https://www.youtube.com/embed/dXrCFN1Z4MI?si=lY2GTktFDKZyZfND" 
+         title="YouTube video player" 
+         frameborder="0" 
+         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<li><img src="img/img1.png" width="500px" height="auto" title="MIMI"></li>
 </body>
 </html>
