--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>Los gatos son animales carnívoros, por lo que tienen que incluir la carne en su dieta.</br> 
         A diferencia de los perros, los gatos nunca podrían ser vegetarianos o veganos. </br> felinos toman como fuente de energía
          principal las proteínas y necesitan mayores cantidades de éstas que las que necesitan los perros.</p>
-         <video src="video/I always come back.mp4" autoplay allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></video>
+         <video src="video/I always come back.mp4" autoplay></video>
          <iframe 
          width="1000px" 
          height="500px" 
