--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <p>Los gatos son animales carnívoros, por lo que tienen que incluir la carne en su dieta.</br> 
         A diferencia de los perros, los gatos nunca podrían ser vegetarianos o veganos. </br> felinos toman como fuente de energía
          principal las proteínas y necesitan mayores cantidades de éstas que las que necesitan los perros.</p>
-         <video src="video/I always come back.mp4" autoplay></video>
+         
+         <video src="video/Hora De Sandwich _ Hora de Aventura LA _ Cartoon Network.mp4"
+         width="1000" height="auto" title="Hora de Avertura" autoplay></video>
          <iframe 
          width="1000px" 
          height="500px" 
@@ -32,6 +34,33 @@
          title="YouTube video player" 
          frameborder="0" 
          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+         <table>
+            <tr>
+                <th> 1° parcial </th>
+                <th> 2° parcial </th>
+                <th> 3° parcial </th>
+            </tr>
+            <tr>
+                <td>20</td>
+                <td>40</td>
+                <td>80</td>
+            </tr>
+            <tr>
+                <td>30</td>
+                <td>60</td>
+                <td>90</td>
+            </tr> 
+            <tr>
+                <td>10</td>
+                <td>90</td>
+                <td>68</td>
+            </tr>
+            <tr>
+                <td>20</td>
+                <td>30</td>
+                <td>65</td>
+            </tr>       
+         </table>
 <li><img src="img/img1.png" width="500px" height="auto" title="MIMI"></li>
 </body>
 </html>
