--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
          title="YouTube video player" 
          frameborder="0" 
          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-         <table>
-            <tr>
+         <table border="2" bordercolor="red">
+            <tr bgcolor="#C19A6B" >
                 <th> 1° parcial </th>
                 <th> 2° parcial </th>
                 <th> 3° parcial </th>
