--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosas Turbias</title>
+    <title>Cosas Turbias 👻👻👻</title>
 </head>
 <body>
     <h1>Etiquetas HTML</h1>
@@ -26,14 +26,13 @@
          principal las proteínas y necesitan mayores cantidades de éstas que las que necesitan los perros.</p>
          
          <video src="video/Hora De Sandwich _ Hora de Aventura LA _ Cartoon Network.mp4"
-         width="1000" height="auto" title="Hora de Avertura" autoplay></video>
+         width="1000px" height="auto" title="Hora de Avertura" autoplay></video>
          <iframe 
-         width="1000px" 
-         height="500px" 
-         src="https://www.youtube.com/embed/dXrCFN1Z4MI?si=lY2GTktFDKZyZfND" 
-         title="YouTube video player" 
-         frameborder="0" 
-         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+         width="1000" height="500" 
+         src="https://www.youtube.com/embed/3hVoQNovhVs?si=dn-nI3OO7-VGdSo4" 
+         title="La capital PaPa" frameborder="0" 
+         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+         allowfullscreen></iframe>
          <table border="2" bordercolor="red">
             <tr bgcolor="#C19A6B" >
                 <th> 1° parcial </th>
@@ -61,6 +60,32 @@
                 <td>65</td>
             </tr>       
          </table>
+         <A href="//www.youtube.com/watch?v=3hVoQNovhVs&t=574s0" target="_blank">IR AL VIDEO</A>
+         <form>
+          <label>Nombre</label><br>
+          <input type="para entender la historia de fanf es necesario dejar de ver esta franquisia cmo un juego si no como Ciencia ficcion" placeholder="Pon tu nombre HDP">
+          <label>Apellido</label>
+          <input type="text" placeholder="Apellido"></br>
+          <select name="" id="">
+            <option value="cochabamba">cochabamba</option>
+            <option value="la paz">la paz</option>
+            <option value="pando">pando</option>
+            <option value="Beni">Beni</option>
+            <option value="Oruro">Oruro</option>
+            <option value="Sucre">Sucre</option>
+            <option value="Potosi">Potosi</option>
+            <option value="Tarija">Tarija</option>
+            <option value="Santa Cruz">Santa Cruz</option>
+            <label for="">Hahitantes</label>
+            <input type="number">
+            <label for="">Contraseña</label>
+            <input type="password" placeholder="Contra Puerca">
+            <label for="">Detalle</label>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <input type="button" value="Guardar">
+          </select>
+         </form>
 <li><img src="img/img1.png" width="500px" height="auto" title="MIMI"></li>
+
 </body>
 </html>
